[omnibox mac] Make command-shift-enter open tab in foreground

Currently the code falls through to "if (command) then open in
background." This change breaks out the variation if shift is
also pressed.

Bug: 870789
Change-Id: Ie96d355c7c75bec276ed5322aac03f0d3f472a9b
Reviewed-on: https://chromium-review.googlesource.com/1170860
Reviewed-by: Tommy Li <tommycli@chromium.org>
Commit-Queue: Kevin Bailey <krb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582268}
Former-commit-id: b72eac084f64f9aa76c959bd8077e752abb10c4f